[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/UserInterface.gd" type="Script" id=1]
[ext_resource path="res://Assets/Objects/hudJewel_green_empty.png" type="Texture" id=2]
[ext_resource path="res://Assets/Objects/hudJewel_green.png" type="Texture" id=3]
[ext_resource path="res://Assets/Objects/hudX.png" type="Texture" id=4]
[ext_resource path="res://Assets/Objects/hudJewel_red.png" type="Texture" id=5]
[ext_resource path="res://Assets/Objects/hudJewel_red_empty.png" type="Texture" id=6]

[node name="UserInterface" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="ViewportContainer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="ViewportContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 83.0
margin_bottom = 46.0
rect_scale = Vector2( 2, 2 )
text = "Score: 0"

[node name="Control" type="Control" parent="ViewportContainer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="left" type="TouchScreenButton" parent="ViewportContainer/Control"]
position = Vector2( 160, 448 )
rotation = 1.5708
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
visibility_mode = 1

[node name="right" type="TouchScreenButton" parent="ViewportContainer/Control"]
position = Vector2( 192, 576 )
rotation = -1.5708
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
visibility_mode = 1

[node name="Control2" type="Control" parent="ViewportContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_right = 40.0
margin_bottom = 40.0

[node name="up" type="TouchScreenButton" parent="ViewportContainer/Control2"]
position = Vector2( -32, 576 )
rotation = -3.14159
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
visibility_mode = 1

[node name="shoot" type="TouchScreenButton" parent="ViewportContainer/Control2"]
position = Vector2( -224, 576 )
rotation = -3.14159
normal = ExtResource( 6 )
pressed = ExtResource( 5 )
visibility_mode = 1

[node name="Control3" type="Control" parent="ViewportContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Stop" type="Button" parent="ViewportContainer/Control3"]
margin_left = -128.0
margin_top = 32.0
margin_right = 12.0
margin_bottom = 166.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 4 )

[connection signal="pressed" from="ViewportContainer/Control/left" to="." method="_on_left_pressed"]
[connection signal="released" from="ViewportContainer/Control/left" to="." method="_on_left_released"]
[connection signal="pressed" from="ViewportContainer/Control/right" to="." method="_on_right_pressed"]
[connection signal="released" from="ViewportContainer/Control/right" to="." method="_on_right_released"]
[connection signal="pressed" from="ViewportContainer/Control2/up" to="." method="_on_up_pressed"]
[connection signal="released" from="ViewportContainer/Control2/up" to="." method="_on_up_released"]
[connection signal="pressed" from="ViewportContainer/Control2/shoot" to="." method="_on_shoot_pressed"]
[connection signal="released" from="ViewportContainer/Control2/shoot" to="." method="_on_shoot_released"]
[connection signal="pressed" from="ViewportContainer/Control3/Stop" to="." method="_on_Stop_pressed"]
